# optimaltreelabeling

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cc  run  test.txt
include/: constants.h  label.h  labeling.h  tree.h  utils.h  vertex.h
input/: test.in
src/: label.cpp  label_multithread.cpp  label_optimally.cpp  labeling.cpp  tree.cpp  utils.cpp
